--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -10,6 +10,10 @@ img
     max-width: 1170px
     width: 96%
     margin: auto
+    @media (max-width: 640px)
+        width: 90%
+
+
 
 .button
     background-color: $buttons
@@ -25,23 +29,23 @@ img
         justify-content: space-between
         align-items: center
 
-    &_info
+    &__info
         display: flex
         text-align: right
 
-    &_contacts
+    &__contacts
         display: flex
         flex-direction: column
         justify-content: center
         @media (max-width: 640px)
             display: none
     
-    &_address
+    &__address
         color: $accent
         font-size: 13px
         font-weight: 400
     
-    &_phone
+    &__phone
         font-size: 20px
         font-weight: 400
         text-decoration:none
@@ -49,9 +53,79 @@ img
         margin-top: 5px
         color: $accent
 
-    &_button
+    &__button
         padding: 18px 47px
         border-radius: 10px
         margin-left: 30px
         font-size: 13px
      
+.main
+    background-color: $grey
+    
+    &-block
+        display: flex
+        padding: 40px 0 15px 0
+        @media (max-width: 1200px)  
+            flex-direction: column
+    
+    &-text
+        flex-basis: 50%
+        @media (max-width: 1200px) 
+            margin-bottom: 30px
+
+        &__title
+            font-size: 41px
+            color: $accent
+            padding-right: 180px
+            line-height: 55px
+            margin: 45px 0 20px 0
+            @media (max-width: 1200px) 
+                padding-right: 10px
+            @media (max-width: 640px) 
+                fint-size: 30px
+                line-height: 1.4
+
+        &__subtitle
+            font-size: 20px
+            line-height: 65px
+            color: $accent
+            @media (max-width: 640px) 
+                fint-size: 16px
+                line-height: 1.4
+
+    &-image
+        margin-right: -55px
+        @media (max-width: 1200px) 
+            width: 100%
+
+    &-list
+        margin: 40px 0 0 0
+        padding: 0 0 0 0 
+        @media (max-width: 640px) 
+            margin: 30px 0 0 0
+
+       
+        &__item
+            display: flex
+            align-items: center
+            margin-bottom: 20px
+            @media (max-width: 640px) 
+                margin-bottom: 15px
+        &__image
+            width: 40px
+            height: 40px
+            border: 2px solid #ffd200
+            border-radius: 50px
+            display: flex
+            justify-content: center
+            align-items: center
+            margin-right: 30px
+        
+        &__text
+            line-height: 24px
+            font-size: 14px
+            color: $accent
+            max-width: 300px
+            @media (max-width: 640px) 
+                font-size: 1200px
+                max-width: 250px
