--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,7 +1,8 @@
 @import "vars"
+@import "fonts"
 
 body
-    font-family: sans-serif
+   +reg
 
 img
     max-width: 100%
@@ -52,12 +53,14 @@ img
         display: block
         margin-top: 5px
         color: $accent
+        +bold
 
     &__button
         padding: 18px 47px
         border-radius: 10px
         margin-left: 30px
         font-size: 13px
+        +bold
      
 .main
     background-color: $grey
@@ -78,6 +81,7 @@ img
             color: $accent
             padding-right: 180px
             line-height: 55px
+            font-family: 'Museo Sans Bold'
             margin: 45px 0 20px 0
             @media (max-width: 1200px) 
                 padding-right: 10px
